# rust-mcp-filebuffer

./: .gitignore  Cargo.toml  README.md
combine-txt/: src.txt  target.txt
src/: handler.rs  main.rs  state.rs  tools.rs
