[package]
name = "simple-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-mcp-sdk = { version = "0.7", default-features = false, features = [
    "server",
    "macros", 
    "stdio",
    "2025_06_18",
] }
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }