[package]
name = "binary-analysis-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-mcp-sdk = { version = "0.7.2", default-features = false, features = [
    "server",
    "macros",
    "streamable-http",
    "sse",
    "hyper-server",
    "2025_06_18",
] }
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
schemars = "0.8"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
