[package]
name = "binary-analysis-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-mcp-sdk = { workspace = true, default-features = false, features = [
    "server",
    "macros",
    "streamable-http",
    "sse",
    "hyper-server",
    "2025_06_18",
] }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"

[lints]
workspace = true